fixed deprecated method usage.